# Raspberry2025

./: .gitignore  CMake.txt  CMakeLists.txt  README.md
app/: control.py  gui.py  main.py  signals.py  sorting.py  video_stream.py  vision.py
ev3/: motor_control.py  motor_joystick.py  motor_setup.py  relax.py  visualize_log.py
ev3/markers/: markers.xcf
include/: KSolver.hpp  SocketLineReader.hpp  camera_stream.hpp  constants.hpp  motor_control.hpp
src/: KSolver.cpp  SocketLineReader.cpp  camera_stream.cpp  main.cpp  motor_control.cpp
testing/: cam  cam_test  cam_test.cpp
www/: index.html  joystick.js
